--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <!--
   <link rel="stylesheet" href="./assets/css/Login-Form-Dark.css">
   -->
@@ -66,38 +67,41 @@
     </div>
     -->
   
-    <div id="controls" style="text-align: center; color: white; position: absolute; top: 75%">
-      <p>
-        <div class="progress" style="width: 100%;margin-bottom: 12px;background: rgba(127, 127, 127, 0.3);color: rgb(0, 123, 255);filter: blur(1px);height: 9px;">
-          <div class="progress-bar bg-light" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
-        </div>
-
+    <div id="controls" style="text-align: center; color: white; position: absolute; top: 90%;">
       <p style="display: inline; width: 87px;border-color: var(--light);color: var(--light);">{{this.current.name}}</p>
       <button (click)="rewindSong()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-skip-back" style="color: var(--light);width: 66px;height: 42px;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-skip-back" style="color: var(--light);width: 66px;height: 42px;">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M20 5v14l-12 -7z"></path>
           <line x1="4" y1="5" x2="4" y2="19"></line>
       </svg>
       </button>
       <button (click)="this.audioService.playOrPause()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-play" style="padding: 0px;height: 42px;width: 66px;color: var(--light);margin-left: 0px;margin-right: 0px;">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-play" style="padding: 0px;height: 42px;width: 66px;color: var(--light);margin-left: 0px;margin-right: 0px;">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M7 4v16l13 -8z"></path>
       </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-pause" style="padding: 0px;height: 42px;width: 66px;color: var(--light);margin-left: 0px;margin-right: 0px;">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <rect x="6" y="5" width="4" height="14" rx="1"></rect>
+        <rect x="14" y="5" width="4" height="14" rx="1"></rect>
+      </svg>
       </button>
       <button (click)="nextSong()">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-skip-forward" style="padding: 0px;height: 42px;width: 66px;color: var(--light);">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-player-skip-forward" style="padding: 0px;height: 42px;width: 66px;color: var(--light);">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M4 5v14l12 -7z"></path>
           <line x1="20" y1="5" x2="20" y2="19"></line>
       </svg>
       </button>
-      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-volume-2" style="padding: 0px;height: 17px;width: 20px;color: var(--light);">
+      <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 20 20" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-volume-2" style="padding: 0px;height: 17px;width: 20px;color: var(--light);">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M15 8a5 5 0 0 1 0 8"></path>
           <path d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5"></path>
       </svg>
+      <!--
+        <i class="icon-control-pause" style="padding: 0px;height: 106px;width: 177px;color: var(--light);margin-left: 0px;margin-right: 0px;">Test</i>
+      -->
       <input id= "volume_button" type="range" min="0" max="1" value="0.5" step="0.01" (input)="changeVolume($event.srcElement)">
       <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-volume" style="padding: 0px;height: 17px;width: 20px;color: var(--light);">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -106,13 +110,19 @@
           <path d="M6 15h-2a1 1 0 0 1 -1 -1v-4a1 1 0 0 1 1 -1h2l3.5 -4.5a.8 .8 0 0 1 1.5 .5v14a.8 .8 0 0 1 -1.5 .5l-3.5 -4.5"></path>
       </svg>
 
-    <input type="range" id="panner" class="control-panner" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner" />
+    <input type="range" id="panner" class="control-panner" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner"/>
         <datalist id="pan-vals">
           <option value="-1" label="left">
           <option value="1" label="right">
         </datalist>
         <label for="panner">PAN</label>
       <br>
+
+      <p style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
+      <div class="progress" style="display: inline-block;width: 80%;margin-top: 20px;border-radius: 15px;background: rgba(127, 127, 127, 0.3);color: rgb(0, 123, 255);height: 9px;">
+        <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(255, 255, 255, 1);height: 100%;"></div>
+      </div>
+      <p style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
   </div>
 </div>
 
