--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -53,3 +53,28 @@ input[type=range] {
 #progress {
   width: 700px;
 }
+
+.custom_icon {
+  width: 50px;
+  height: 50px;
+}
+
+.overlay {
+  height: 100%;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4);
+  overflow-x: hidden;
+}
+
+.overlay-content {
+  color: white;
+}
+
+.slider {
+  -webkit-appearance: sliderthumb-vertical;
+}
