--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -66,7 +66,6 @@ input[type=range] {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(0,0,0);
   background-color: rgba(0,0,0, 0.4);
   overflow-x: hidden;
 }
@@ -76,5 +75,18 @@ input[type=range] {
 }
 
 .slider {
-  -webkit-appearance: sliderthumb-vertical;
+  direction: vertical;
+}
+
+#infoBox {
+  padding: 10px;
+  height: 20%;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0, 0.4);
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
