--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -26,19 +26,27 @@
     <canvas #rendererCanvas id="renderCanvas" height="100%" width="100%"></canvas>
   
     <div style="position: absolute;top: 1%; left: 98%;">
-      <button (click)="toggleMenu()">
+      <button (click)="toggleInfo()">
         <img src="../../../assets/icons/info.svg" style="height: 25px;width: 25px;">
       </button><br>
     </div>
   </div>
 
+  <div id="infoBox" style="width: 0%;text-align: left;color: white;opacity: 0;">
+    <h2>Controls:</h2>
+    <p>m     : access the menu<br>
+       d     : play the previous song<br>
+       a     : play the next song<br>
+       space : play/pause the music</p>
+  </div>
+
   <div id="menu" class="overlay" style="width: 0%;text-align: center;">
     <div class="overlay-content">
-      <h1 style="display: inline; margin-top: 40px;;text-align: center;border-color: var(--light);color: var(--light);">{{this.current.name}}</h1><br><br>
+      <h1 style="margin-top: 40px;text-align: center;border-color: var(--light);color: var(--light);">{{this.current.name}}</h1><br><br>
       <label for="loadFile" style="cursor: pointer;margin: 0;">Choose a file to visualize</label><br>
       <input type="file" id="uploadFile" name="uploadFile" style="position: absolute;z-index: 1;opacity: 0;margin-top: -20px;" (change)="loadFilePath($event.target)" accept=".mp3">
 
-      <div id="controls" style="text-align: center; color: white; position: absolute; top: 90%;">
+      <div id="controls" style="text-align: center; color: white; position: absolute; top: 88%;">
         <div id="buttonControls">
           <button (click)="rewindSong()">
             <img class="custom_icon" src="../../../assets/icons/rewind.svg">
@@ -53,7 +61,7 @@
         
         <div id="silderControls" style="position: absolute;right: 0; top: 10%">
           <img src="../../../assets/icons/volumedown.svg">
-          <input id= "volume_button" class="slider" type="range" min="0" max="1" value="0.5" step="0.01" (input)="changeVolume($event.srcElement)">
+          <input id= "volume_button" type="range" min="0" max="1" value="0.5" step="0.01" style="direction: vertical;" (input)="changeVolume($event.srcElement)">
           <img src="../../../assets/icons/volumeup.svg">
 
           <input type="range" id="panner" class="control-panner slider" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner"/>
@@ -64,14 +72,11 @@
               <label for="panner">PAN</label>
             <br>
         </div>
-
-        <div id="controls" style="text-align: center; color: white; position: absolute; top: 90%;">
-          <p style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
-          <div class="progress" style="display: inline-block;width: 80%;margin-top: 20px;border-radius: 15px;background: rgba(127, 129, 127, 0.3);color: rgb(0, 123, 255);height: 9px;">
-            <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(0, 0, 0, 1);height: 100%;"></div>
-          </div>
-          <p style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
-      </div>
+        <p style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
+        <div class="progress" style="display: inline-block;width: 80%;top: 0px;border-radius: 15px;background: rgba(127, 127, 127, 0.3);color: rgb(0, 123, 255);height: 9px;">
+          <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(0, 0, 0, 1);height: 100%;"></div>
+        </div>
+        <p style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
     </div>
   </div>
 </div>
