--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -73,8 +73,8 @@
             <br>
         </div>
         <p style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
-        <div class="progress" style="display: inline-block;width: 80%;top: 0px;border-radius: 15px;background: rgba(127, 127, 127, 0.3);color: rgb(0, 123, 255);height: 9px;">
-          <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(0, 0, 0, 1);height: 100%;"></div>
+        <div class="progress" style="display: inline-block;width: 80%;top: 0px;border-radius: 15px;background-color: rgba(127, 127, 127, 0.7);color: rgb(0, 123, 255);height: 9px;">
+          <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(255, 255, 255, 1);width: 0%;height: 100%;"></div>
         </div>
         <p style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
     </div>
