--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -1,8 +1,83 @@
+/******************************************************************************
+                                HTML Elements
+******************************************************************************/
 H1 {
+  margin-top: 40px;
   text-align: center;
+  border-color: var(--light);
+  color: var(--light);
 }
 
-#canvasButtons {
+button {
+  padding: 0px;
+  display: inline-block;
+  align-items: center;
+  outline: none;
+  border: none;
+  color: white;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 0;
+  border-radius: 5px;
+  height: 5px;
+  background-color: white;
+}
+
+/******************************************************************************
+                                    Classes
+******************************************************************************/
+.ui-button {
+  height: 25px;
+  width: 25px;
+}
+
+.overlay {
+  text-align: center;
+  height: 100%;
+  width: 0%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0, 0.4);
+  overflow-x: hidden;
+}
+
+.overlay-content {
+  color: white;
+}
+
+.controls {
+  color: white;
+  position: absolute;
+  margin: 0;
+  width: 100%;
+  align-items: center;
+  top: 88%;
+}
+
+.custom_icon {
+  width: 50px;
+  height: 50px;
+}
+
+.progress {
+  display: inline-block;
+  width: 80%;
+  top: 0px;
+  border-radius: 15px !important;
+  background-color: rgba(127, 127, 127, 0.7) !important;
+  color: rgb(0, 123, 255);
+  height: 9px !important;
+}
+
+/*******************************************************************************
+                                      ID's
+*******************************************************************************/
+#canvas-visualizer {
   position: relative;
   margin: 0;
   width: 100%;
@@ -18,68 +93,16 @@ H1 {
   position: relative;
 }
 
-#controls {
-  color: white;
+#info-button {
   position: absolute;
-  margin: 0;
-  width: 100%;
-  align-items: center;
+  top: 1%;
+  left: 98%;
 }
 
-button {
-  padding: 0px;
-  display: inline-block;
-  align-items: center;
-  outline: none;
-  border: none;
+#info-menu {
+  text-align: left;
   color: white;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-i {
-  padding: 0;
-  margin: 0;
-  color: white;
-}
-
-input[type=range] {
-  -webkit-appearance: none;
-  margin: 0;
-  border-radius: 5px;
-  height: 5px;
-  background-color: white;
-}
-
-#progress {
-  width: 700px;
-}
-
-.custom_icon {
-  width: 50px;
-  height: 50px;
-}
-
-.overlay {
-  height: 100%;
-  width: 0%;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: rgba(0,0,0, 0.4);
-  overflow-x: hidden;
-}
-
-.overlay-content {
-  color: white;
-}
-
-.slider {
-  direction: vertical;
-}
-
-#infoBox {
-  padding: 10px;
+  opacity: 0;
   height: 20%;
   width: 0%;
   position: fixed;
@@ -89,4 +112,21 @@ input[type=range] {
   background-color: rgba(0,0,0, 0.4);
   overflow-x: hidden;
   overflow-y: hidden;
+}
+
+#file-label {
+  cursor: pointer;
+}
+
+#upload-file{
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+#button {
+  width: 50%;
+  align-items: center;
+  margin-left: 40%;
+  margin-right: 25%;
 }
