--- a/music-visualizer/src/app/pages/About-Page/about-page.component.html
+++ b/music-visualizer/src/app/pages/About-Page/about-page.component.html
@@ -22,6 +22,10 @@
       </div>
     </div>
     <div class="col-lg-8 mx-auto">
+      <p>Credits:</p>
+      <p>
+        “Fantasy Sky Background” (https://skfb.ly/6u9DR) by Hannes Delbeke is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).
+      </p>
       <p class="text-faded mb-5" style="white-space: pre-line;">{{readme}}</p>
     </div>
   </div>
