--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -32,8 +32,8 @@
     <h1 class="text-uppercase"><strong>Current Stored Data:</strong></h1>
     <p> {{this.userData.name}} </p>
     <p> {{this.userData.email}} </p>
-    
     <div style="margin-top: 30%;width: 100%;text-align: center;">
+      <p>To go back to the visualization page <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="goBackToVisualPage()">click here.</a></p>
       <p>To logout of your account <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="logout()">click here.</a></p>
     </div>
   </div>
