--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -1,6 +1,10 @@
 /******************************************************************************
                                 HTML Elements
 ******************************************************************************/
+html {
+  overflow-y: hidden;
+}
+
 H1 {
   margin-top: 40px;
   text-align: center;
@@ -30,14 +34,14 @@ input[type=range] {
                                     Classes
 ******************************************************************************/
 .ui-button {
-  height: 25px;
-  width: 25px;
+  height: 200% !important;
+  width: 200% !important;
 }
 
 .overlay {
   text-align: center;
   height: 100%;
-  width: 0%;
+  width: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -56,7 +60,7 @@ input[type=range] {
   margin: 0;
   width: 100%;
   align-items: center;
-  top: 88%;
+  top: 85%;
 }
 
 .custom_icon {
