--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -19,7 +19,7 @@
   -->
 
   <audio #audioFile id='audio_file' crossorigin="anonymous">
-    <source src="../../../assets/music/tripleT.mp3" origin="http://localhost:4200" id="audio_source" type="audio/mp3">
+    <source src="../../../assets/music/ILLENIUM, X Ambassadors - In Your Arms (Visualizer).mp3" origin="http://localhost:4200" id="audio_source" type="audio/mp3">
   </audio>
 <!--  <audio id= "audio_file" src="../../../songs/RickFlair.mp3" crossorigin="anonymous" ></audio>-->
   <div id="canvas-visualizer">
@@ -41,7 +41,7 @@
        space : play/pause the music</p>
   </div>
 
-  <div id="menu" class="overlay" style="width: 0%;">
+  <div id="menu" class="overlay" style="width: 100%;">
     <div class="overlay-content">
       <!--Profile Page Button-->
       <button routerLink="../ProfilePage" style="position: absolute;left: 1%;top: 1%;">
@@ -80,16 +80,12 @@
         <div id="silder" style="display: inline">
           <!--Volume slider-->
           <img src="../../../assets/icons/volumedown.svg">
-          <input id= "volume_button" type="range" min="0" max="1" value="0.5" step="0.01" (input)="changeVolume($event.srcElement)">
+          <input id= "volume_button" type="range" min="0" max="1" value="1" step="0.1" (input)="changeVolume($event.srcElement)">
           <img src="../../../assets/icons/volumeup.svg">
 
           <!--Pan slider-->
-          <input type="range" id="panner" class="control-panner slider" list="pan-vals" min="-1" max="1" value="0" step="0.01" data-action="panner"/>
-              <datalist id="pan-vals">
-                <option value="-1" label="left">
-                <option value="1" label="right">
-              </datalist>
-              <label for="panner">PAN</label>
+          <input type="range" id="panner" min="-1" max="1" value="0" step="0.01" (input)="changePan($event.srcElement)">
+          <label for="panner">PAN</label>
             <br>
         </div>
 
