--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -33,6 +33,7 @@
     <p> {{this.userData.name}} </p>
     <p> {{this.userData.email}} </p>
     <div style="margin-top: 30%;width: 100%;text-align: center;">
+      <p>Authorize Spotify Here <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="authorizeSpotify()">click here.</a></p>
       <p>To go back to the visualization page <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="goBackToVisualPage()">click here.</a></p>
       <p>To logout of your account <a class="btn btn-primary btn-xl js-scroll-trigger" role="button" (click)="logout()">click here.</a></p>
     </div>
