--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -88,11 +88,11 @@
 
         <!--Progress bar-->
       <div>
-        <p style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
+        <p id="progress-timestamp" style="display: inline-block;padding: 10px;">{{timeString(progress())}}</p>
         <div class="progress" style="display: inline-block;">
           <div id="progress-bar" class="progress-bar bg-light" style="background-color: rgba(255, 255, 255, 1);width: 0%;height: 100%;"></div>
         </div>
-        <p style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
+        <p id="duration-timestamp" style="display: inline-block;padding: 10px;">{{timeString(duration())}}</p>
       </div>
     </div>
   </div>
