--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -25,10 +25,10 @@ button {
 
 input[type=range] {
   -webkit-appearance: none;
-  margin: 0;
   border-radius: 5px;
   height: 5px;
   background-color: white;
+  margin: 0;
 }
 
 /******************************************************************************
@@ -131,8 +131,19 @@ input[type=range] {
 }
 
 #button {
-  width: 50%;
-  align-items: center;
-  margin-left: 44%;
-  margin-right: 25%;
+  float: center;
+}
+
+#slider {
+  position: absolute;
+  right: 2%;
+  bottom: 55%;
+}
+
+#volume #panner {
+  display: block;
+}
+
+#panner p {
+  padding: 1%;
 }
