Added menu timeout

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -57,7 +57,7 @@
           </button>
 
           <!--Play/Pause button-->
-          <button (click)="this.audioService.playOrPause()">
+          <button (click)="togglePlay()">
             <img class="custom_icon" src={{playPauseIcon()}}>
           </button>
 
