--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -128,10 +128,12 @@ input[type=range] {
 
 #load-label {
   cursor: pointer;
+  margin-bottom: 1%;
 }
 
-#upload-label{
+#load-mic {
   cursor: pointer;
+  margin-top: -2%;
 }
 
 #button {
