--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -16,7 +16,6 @@ H1 {
 button {
   padding: 0px;
   display: inline-block;
-  align-items: center;
   outline: none;
   border: none;
   color: white;
@@ -41,25 +40,34 @@ input[type=range] {
                                     Classes
 ******************************************************************************/
 .ui-button {
-  height: 200% !important;
-  width: 200% !important;
+  height: 100% !important;
+  width: 100% !important;
 }
 
 .overlay {
   text-align: center;
-  height: 100%;
+  height: 10%;
   width: 100%;
+  opacity: 0;
   position: fixed;
   z-index: 1;
-  top: 0;
+  top: 90%;
   left: 0;
   background-color: rgba(0,0,0, 0.4);
   overflow-x: hidden;
   overflow-y: hidden;
+  transition: 0.2s 2s;
+}
+
+.overlay:hover {
+  opacity: 1;
+  transition: 0s;
 }
 
 .overlay-content {
   color: white;
+  top: 0;
+  left: 0;
 }
 
 .controls {
@@ -67,13 +75,26 @@ input[type=range] {
   position: absolute;
   margin: 0;
   width: 100%;
-  align-items: center;
-  top: 85%;
+  top: 0%;
 }
 
-.custom_icon {
+.custom-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.custom-icon-play {
   width: 50px;
   height: 50px;
+  margin: 10px;
+}
+
+.song-text {
+  margin: 0;
+  text-align: left;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .progress {
@@ -84,6 +105,15 @@ input[type=range] {
   background-color: rgba(127, 127, 127, 0.7) !important;
   color: rgb(0, 123, 255);
   height: 9px !important;
+}
+
+.settings-button {
+  width: 20%;
+  margin-left: 1%;
+}
+
+.upload-blur {
+  filter: blur(1px);
 }
 
 /*******************************************************************************
@@ -136,14 +166,22 @@ input[type=range] {
   margin-top: -2%;
 }
 
+#song-display {
+  position: absolute;
+  text-align: left;
+  vertical-align: center;
+  left: 2%;
+  top: 15%;
+  margin: 0;
+  width: 20%;
+}
+
 #button {
   float: center;
 }
 
 #slider {
-  position: absolute;
-  right: 2%;
-  bottom: 55%;
+  display: inline-block;
 }
 
 #volume #panner {
@@ -152,4 +190,47 @@ input[type=range] {
 
 #panner p {
   padding: 1%;
+}
+
+#settings {
+  position: absolute;
+  right: 2%;
+  top: 25%;
+  display: inline-block;
+  width: 12%;
+  text-align: right;
+}
+
+#progress-time {
+  position: absolute;
+  width: 100%;
+  margin: 0;
+  top: 70%;
+}
+
+#upload-menu {
+  position: absolute;
+  top: 20%;
+  border-radius: 15px;
+  left: 10%;
+  padding: 10%;
+  background-color: rgb(255, 255, 255, 0.5);
+  color: black;
+  width: 80%;
+  height: 50%;
+  text-align: center;
+}
+
+#song-title {
+  font-size: large;
+}
+
+#song-subtitle {
+  font-size: small;
+}
+
+#album {
+  margin: 2%;
+  width: 25%;
+  height: 25%;
 }
