--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -35,45 +35,44 @@
     </a>
   </div>
 
-  <div id="edit-menu">
-    <!--Slider controls: volume, pan
+  <div id="edit-menu" style="width: 0%; opacity: 0;">
+    <!--Slider controls: volume, pan-->
           <div id="slider">
             <!--Scene slider: broken right now
-            <!--
               <div id="scene">
               <label for="scene-slider">Scene </label>
               <input id="scene-slider" type="range" min="0" max="2" value="0" step="1" (change)="changeScene($event.srcElement)">
             </div>
             -->
             
-
-            <!--FFT slider
+            <!--FFT slider-->
             <div id="fft">
-              <label for="fft-slider">FFT </label>
+              <p style="display: inline">0</p>
               <input id="fft-slider" type="range" min="5" max="15" value="4" step="1" (change)="changeFFT($event.srcElement)">
+              <p style="display: inline">9</p>
             </div>
 
-            <!--Smoothing time constant slider
+            <!--Smoothing time constant slider-->
             <div id="sc">
-              <label for="sc-slider">SC</label>
+              <p style="display: inline">0</p>
               <input id="sc-slider" type="range" min="0" max="0.99" value="0.74" step="0.01" (change)="changeSC($event.srcElement)">
+              <p style="display: inline">1</p>
             </div>
 
-            <!--Volume slider
+            <!--Volume slider-->
             <div id="volume">
               <img src="../../../assets/icons/volumedown.svg">
               <input id= "volume-slider" type="range" min="0" max="1" value="1" step="0.1" (input)="changeVolume($event.srcElement)">
               <img src="../../../assets/icons/volumeup.svg">
             </div>
             
-            <!--Pan slider
+            <!--Pan slider-->
             <div id="panner">
               <p style="display: inline;">L</p>
               <input id="panner-slider" type="range" style="display: inline;" min="-1" max="1" value="0" step="0.01" (input)="changePan($event.srcElement)">
               <p style="display: inline;">R</p>
             </div>
           </div>
-        -->
   </div>
 
   <!--Control info menu listed when info button is pressed-->
@@ -85,7 +84,7 @@
        space : play/pause the music</p>
   </div>
 
-  <div id="menu" class="overlay" style="width: 100%;">
+  <div id="menu" class="overlay">
     <div class="overlay-content">
       <!--Song controls-->
       <div class="controls" *ngIf="!micUsed">
@@ -131,7 +130,7 @@
           </button>
 
           <!--Visualization settings button-->
-          <button class="settings-button" style="display: inline-block;" (click)="toggleSongMenu()">
+          <button class="settings-button" style="display: inline-block;" (click)="toggleEditMenu()">
             <img class="ui-button" src="../../../assets/icons/settings.svg">
           </button>
         </div>
