Fixed scene slider

--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.html
@@ -38,12 +38,11 @@
   <div id="edit-menu" style="width: 0%; opacity: 0;">
     <!--Slider controls: volume, pan-->
           <div id="slider">
-            <!--Scene slider: broken right now
+            <!--Scene slider: broken right now-->
               <div id="scene">
               <label for="scene-slider">Scene </label>
               <input id="scene-slider" type="range" min="0" max="2" value="0" step="1" (change)="changeScene($event.srcElement)">
             </div>
-            -->
             
             <!--FFT slider-->
             <div id="fft">
