--- a/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
+++ b/music-visualizer/src/app/pages/Visualization-Page/visualization-page.component.css
@@ -168,12 +168,13 @@ input[type=range] {
 #edit-menu {
   position: absolute;
   bottom: 12%;
-  right: 0;
+  left: 85%;
   background-color: rgba(255, 255, 255, 0.4);
   text-align: center;
   border-radius: 15px;
   padding: 1%;
   opacity: 0;
+  width: 0%;
   transition: 0.1s 0.2s;
 }
 
