Password reset email sending

--- a/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
+++ b/music-visualizer/src/app/pages/Profile-Page/profile-page.component.html
@@ -35,7 +35,7 @@
 
     <div class="form-group">
       <button class="btn btn-primary btn-block" type="submit">Change name</button>
-      <button class="btn btn-primary btn-block" type="submit">Change password</button>
+      <button class="btn btn-primary btn-block" type="submit" (click)="passwordReset()">Change password</button>
       <button class="btn btn-primary btn-block" type="submit">Link Spotify</button>
     </div>
 
